sl-two实现隐藏（真）

--- a/xiaomi.html
+++ b/xiaomi.html
@@ -97,9 +97,9 @@
 						<span>小米8</span>
 						<span>小米MIX 2S</span>
 					</div>
-					<div id="sou-right" class="bianbo">
-						<i class="iconfont icon-sousuo"></i>
-					</div>
+				</div>
+				<div id="sou-right">
+					<i class="iconfont icon-sousuo"></i>
 				</div>
 			</div>
 			<div class="clearfloat"></div>
@@ -191,7 +191,7 @@
 				<span>小米闪购</span>
 			</div>
 			<div id="xmsg-bottom">
-				<iframe src="./xiaomishangou.html"></iframe>
+				<iframe src="../day6/xiaomishangou.html"></iframe>
 			</div>
 		</div>
 	</body>
