轮播图功能完全实现

--- a/xiaomi.html
+++ b/xiaomi.html
@@ -5,6 +5,7 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/xiaomi.css"/>
 		<link rel="stylesheet" type="text/css" href="img/font/iconfont.css"/>
+		<script type="text/javascript" src="js/xiaomi.js"></script>
 	</head>
 	<body>
 		<div id="aside">
@@ -149,7 +150,18 @@
 					</li>
 				</ul>
 			</div>
-			<div id="lunbo-right"></div>
+			<div id="lunbo-right">
+				<ul>
+					<li id="li1" onclick="xianshitu(1,this)"></li>
+					<li id="li2" onclick="xianshitu(2,this)"></li>
+					<li id="li3" onclick="xianshitu(3,this)"></li>
+					<li id="li4" onclick="xianshitu(4,this)"></li>
+					<li id="li5" onclick="xianshitu(5,this)"></li>
+					<li id="li6" onclick="xianshitu(6,this)"></li>
+				</ul>
+			</div>
+			<div id="lj-left" class="iconfont icon-jiantou-left lunbo-jiantou" onclick="toleft()"></div>
+			<div id="lj-right" class="iconfont icon-jiantou-right-copy lunbo-jiantou" onclick="toright()"></div>
 		</div>
 		<div id="situ">
 			<div id="situ-first">
