--- a/xiaomi.html
+++ b/xiaomi.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>小米商城 - 小米8、小米MIX 2S、红米6 Pro、小米电视官方网站</title>
 		<link rel="stylesheet" type="text/css" href="css/xiaomi.css"/>
 		<link rel="stylesheet" type="text/css" href="img/font/iconfont.css"/>
+		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
 		<script type="text/javascript" src="js/xiaomi.js"></script>
 	</head>
 	<body>
