完全实现搜索框及轮播图左侧弹出

--- a/xiaomi.html
+++ b/xiaomi.html
@@ -49,6 +49,9 @@
 						<span>(0)</span>
 					</a>
 				</li>
+				<li id="nr-tanchu">
+					<span>购物车中没有内容，赶紧滚蛋吧！</span>
+				</li>
 				<div class="clearfloat"></div>
 			</ul>
 			<div class="clearfloat"></div>
@@ -94,13 +97,15 @@
 			</div>
 			<div id="sou">
 				<div id="sou-left">
-					<input id="sl-in" type="text" />
-					<div id="sl-two">
-						<span>小米8</span>
-						<span>小米MIX 2S</span>
-					</div>
-					<div id="sou-right">
-						<i class="iconfont icon-sousuo"></i>
+					<input id="sl-in" type="text"  />
+					<div id="si-yingxiang">
+						<div id="sl-two">
+							<span>小米8</span>
+							<span>小米MIX 2S</span>
+						</div>
+						<div id="sou-right">
+							<i class="iconfont icon-sousuo"></i>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -112,10 +117,191 @@
 					<li>
 						<span>手机 电话卡</span>
 						<span class="iconfont icon-arrowRight"></span>
+						<div id="ll-shouji" class="ll-tanchu">
+							<ul class="ls-co1">
+								<li>
+									<img src="img/m8-80.png" />
+									<span>小米8</span>
+								</li>
+								<li>
+									<img src="img/m8se-80.png"/>
+									<span>小米8 SE</span>
+								</li>
+								<li>
+									<img src="img/80808080808080.jpg" />
+									<span>小米6X</span>
+								</li>
+								<li>
+									<img src="img/mix2-80.png"/>
+									<span>小米MIX 2S</span>
+								</li>
+								<li>
+									<img src="img/mix2s80-80white.png" />
+									<span>小米2s</span>
+								</li>
+								<li>
+									<img src="img/heisha-80.png"/>
+									<span>黑鲨手机</span>
+								</li>
+							</ul>
+							<ul class="ls-co2">
+								<li>
+									<img src="img/max2_80.jpg"/>
+									<span>小米Max 2</span>
+								</li>
+								<li>
+									<img src="img/6pro140-140.png"/>
+									<span>红米6 Pro</span>
+								</li>
+								<li>
+									<img src="img/6AAAA.png"/>
+									<span>红米6A</span>
+								</li>
+								<li>
+									<img src="img/note5-80-80.png"/>
+									<span>红米Note 5</span>
+								</li>
+								<li>
+									<img src="img/s2-80-80.png"/>
+									<span>红米S2</span>
+								</li>
+								<li>
+									<img src="img/666666.png"/>
+									<span>红米6</span>
+								</li>
+							</ul>
+							<ul class="ls-co3">
+								<li>
+									<img src="img/80-5a.png"/>
+									<span>红米5A</span>
+								</li>
+								<li>
+									<img src="img/redmi5-80-80.png"/>
+									<span>红米5</span>
+								</li>
+								<li>
+									<img src="img/redmi5P-80-80.png"/>
+									<span>红米5 Plus</span>
+								</li>
+								<li>
+									<img src="img/mifenka-1.jpg"/>
+									<span>米粉卡 日租卡</span>
+								</li>
+								<li>
+									<img src="img/80.jpg"/>
+									<span>移动4G+专区</span>
+								</li>
+								<li>
+									<img src="img/compare.jpg"/>
+									<span>对比手机</span>
+								</li>
+							</ul>
+							<ul class="ls-co4">
+								<li>
+									<img src="//i1.mifile.cn/f/i/g/2015/cn-index/weixiu80-80.png?width=80&height=80"/>
+									<span>手机上门维修</span>
+								</li>
+								<li>
+									<img src="//i1.mifile.cn/f/i/15/goods/sidebar/mimobile.jpg?width=80&height=80"/>
+									<span>小米移动 电话卡</span>
+								</li>
+							</ul>
+						</div>
 					</li>
 					<li>
 						<span>电视 盒子</span>
 						<span class="iconfont icon-arrowRight"></span>
+						<div id="ll-dianshi" class="ll-tanchu">
+							<ul class="ls-co1">
+								<li>
+									<img src="img/m8-80.png" />
+									<span>小米8</span>
+								</li>
+								<li>
+									<img src="img/m8se-80.png"/>
+									<span>小米8 SE</span>
+								</li>
+								<li>
+									<img src="img/80808080808080.jpg" />
+									<span>小米6X</span>
+								</li>
+								<li>
+									<img src="img/mix2-80.png"/>
+									<span>小米MIX 2S</span>
+								</li>
+								<li>
+									<img src="img/mix2s80-80white.png" />
+									<span>小米2s</span>
+								</li>
+								<li>
+									<img src="img/heisha-80.png"/>
+									<span>黑鲨手机</span>
+								</li>
+							</ul>
+							<ul class="ls-co2">
+								<li>
+									<img src="img/max2_80.jpg"/>
+									<span>小米Max 2</span>
+								</li>
+								<li>
+									<img src="img/6pro140-140.png"/>
+									<span>红米6 Pro</span>
+								</li>
+								<li>
+									<img src="img/6AAAA.png"/>
+									<span>红米6A</span>
+								</li>
+								<li>
+									<img src="img/note5-80-80.png"/>
+									<span>红米Note 5</span>
+								</li>
+								<li>
+									<img src="img/s2-80-80.png"/>
+									<span>红米S2</span>
+								</li>
+								<li>
+									<img src="img/666666.png"/>
+									<span>红米6</span>
+								</li>
+							</ul>
+							<ul class="ls-co3">
+								<li>
+									<img src="img/80-5a.png"/>
+									<span>红米5A</span>
+								</li>
+								<li>
+									<img src="img/redmi5-80-80.png"/>
+									<span>红米5</span>
+								</li>
+								<li>
+									<img src="img/redmi5P-80-80.png"/>
+									<span>红米5 Plus</span>
+								</li>
+								<li>
+									<img src="img/mifenka-1.jpg"/>
+									<span>米粉卡 日租卡</span>
+								</li>
+								<li>
+									<img src="img/80.jpg"/>
+									<span>移动4G+专区</span>
+								</li>
+								<li>
+									<img src="img/compare.jpg"/>
+									<span>对比手机</span>
+								</li>
+							</ul>
+							<ul class="ls-co4">
+								<li>
+									<img src="//i1.mifile.cn/f/i/g/2015/cn-index/weixiu80-80.png?width=80&height=80"/>
+									<span>手机上门维修</span>
+								</li>
+								<li>
+									<img src="//i1.mifile.cn/f/i/15/goods/sidebar/mimobile.jpg?width=80&height=80"/>
+									<span>小米移动 电话卡</span>
+								</li>
+							</ul>
+						</div>
+
 					</li>
 					<li>
 						<span>笔记本 平板</span>
